# eval_tests_with_groundedtruths

./: EVALUATION_REPORT.md  README.md  correlation_ids_log.csv  crewai_flow.html  ocr_ground_truth_check.py  ocr_proccess_document_1.py  ocr_proccess_document_2.py  ocr_raw_results_base_for_ground_truth.json  poem.txt  pyproject.toml
extra/: ground_truth_002.json  response_001.json  response_002.json
files/: ocr_response_019a4ee5-9fbc-765b-ae21-213ef022cb80.json  ocr_response_019a4ee5-a815-7492-ab2e-3cba029e6734.json  response_003.json
groundedtruths/: ground_truth_001.json  ground_truth_003.json  ocr_ground_truth_019a4ee5-9fbc-765b-ae21-213ef022cb80.json  ocr_ground_truth_019a4ee5-a815-7492-ab2e-3cba029e6734.json
src/eval_tests_with_groundedtruths/: main.py
src/eval_tests_with_groundedtruths/crews/evaluation_crew/: __init__.py  evaluation_crew.py
src/eval_tests_with_groundedtruths/crews/evaluation_crew/config/: agents.yaml  tasks.yaml
src/eval_tests_with_groundedtruths/crews/poem_crew/: poem_crew.py
src/eval_tests_with_groundedtruths/crews/poem_crew/config/: agents.yaml
src/eval_tests_with_groundedtruths/models/: evaluation_models.py
src/eval_tests_with_groundedtruths/tools/: exact_match_tool.py  json_reader_tool.py  report_generator_tool.py
